--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,19 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+body {
+  background-color: lightgrey;
+  font-family: "Honk";
+  font-size: 50px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25vh;
+}
+.excusecontainer {
+  border: 6px solid darkslategrey;
+  background-color: darkseagreen;
+  padding: 0px 30px;
+  margin-top: 60px;
+  border-radius: 40px;
+  width: fit-content;
+}
